--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
+    "apollo-datasource-rest": "^3.6.1",
     "apollo-server": "^3.9.0",
     "dotenv": "^16.0.1",
     "eslint": "^8.18.0",
